assets/css/refresh.css
/* Style for the summary pages */
.refresh-summary-title{
  position: relative;
  margin: 10px 0 0 0;
  margin-bottom: 10px !important;
  padding: 0 0 5px 0;
  max-width: 100%;
  overflow: hidden
  height: 10em;
  white-space: nowrap;
  text-overflow: ellipsis;
  white-space: normal !important;
}



.refresh-summary{
  display: -webkit-box;
  -webkit-line-clamp: 6;
  -webkit-box-orient: vertical;  
  overflow: hidden;
  height: 9em;
  text-overflow: ellipsis;

}

/* end */

/* Styles for code snippets */
.code-highlight{
  font-size: 1.1em;
  border-radius: 4px;
}
.content pre code table td:first-child{
  border-right: 1px solid #999;/* #dbdbdb;*/
  text-align: right;
  padding-right: 13px;
  color: #999; /*f8f8f2*/
}
.code-highlight table td{
  border: 0px;
}
.code-highlight table{
  width: auto;
}
.nonumbers pre code table td:first-child{
  display: none;
}
.codeinline{
  display:inline !important;        
  padding-top: 0.25em; 
  padding-right: 0.250em;
  padding-bottom: 0.25em;                            
  padding-left: 0.25em;                               
  border-radius: 4px;                                
  white-space: nowrap;
}  
/* End */

/* Style to remove srollbar width */
div.scroll { 
  overflow-x: hidden; 
  scrollbar-width: none; /* Remove scrollbar width in Firefox */
  -ms-overflow-style: -ms-autohiding-scrollbar; /* Remove scrollbar width in MS Edge */
}
/* Remove scrollbar width in Chrome */
div.scroll::-webkit-scrollbar { width: 0px; }
/* end */


/* .content{
  pre{
    background-color: hsla(120, 100%, 50%, 0); 
  }
  .hide{
    display: none
  }
  h5{
    display: inline-block;
  }
  h4{
    display: inline-block;
  }
  
  .rounded-corners{
    border-radius: 10px;         
  }
  .highlight{
    border-radius: 4px;
    margin: 1.25em 1.5em;
  }
} */

/* Style for tabs shortcode */
.content .pre-colorless{
  background-color: hsla(120, 100%, 50%, 0); 
}
/* .pre-colorless{
  background-color: hsla(120, 100%, 50%, 0);
  padding: 1em 1em;
} */
.content .hide{
  display: none; /* !important;*/
}
/* End */

/* Style to fix titles when using links inside same page */
.content h5{
  display: inline-block;
}
.content h4{
  display: inline-block;
} 
/* End */

/* Style used in images */
.content .rounded-corners{
  border-radius: 10px;         
}
/* end */

/* .content .highlight{
  border-radius: 4px;
   padding: 1.25em 1.5em;
   margin: 1.25em 0em;
} */

/* .pre-color{
  background-color: #f5f5f5;
  padding: 1em 1em;
}
*/

/* .pre-colorless{
  pre{
    background-color: black;
  }
} */

/* Style used in "site" shortcode */
.refresh-site-left{
  width: 100%; 
  border-top-right-radius: 0px; ; 
  border-bottom-right-radius: 0px;
}
.refresh-site-right{
  width: 100%; 
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}
/* end */

/* .refresh-book{
  min-width: 50px; 
  max-width: 250px;
} */

/* .hide{
    display: none;
} */

